--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -14,4 +14,9 @@ body{
     margin: auto;
     height: 500px;
     margin-top: 70px;
+   
 }
+ .textos{
+     margin: 10git 0px 0 0 50px;
+     display: inline-block;
+     }
