--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,3 +13,7 @@ body {
   margin: auto;
   height: 500px;
   margin-top: 70px; }
+
+.textos {
+  margin: 10git 0px 0 0 50px;
+  display: inline-block; }
