--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -17,6 +17,17 @@ body{
    
 }
  .textos{
-     margin: 10git 0px 0 0 50px;
+     margin: 80px 0px  0 50px;
      display: inline-block;
+     width: 45%;
      }
+
+.image{
+    width: 50%;
+    float: right;
+    margin-top: 4git0px;
+    }    
+
+img{
+    max-width: 100%;
+    }
