--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,5 +15,14 @@ body {
   margin-top: 70px; }
 
 .textos {
-  margin: 10git 0px 0 0 50px;
-  display: inline-block; }
+  margin: 80px 0px  0 50px;
+  display: inline-block;
+  width: 45%; }
+
+.image {
+  width: 50%;
+  float: right;
+  margin-top: 4git0px; }
+
+img {
+  max-width: 100%; }
